namespaces/proxy/referencegrant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-to-proxy-services
  namespace: proxy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
