namespaces/proxy/10-homeassistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - homeassistant.jarrett.net
    - homeassistant.j5t.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /login
      backendRefs:
        - name: homeassistant
          port: 8123
    - matches:
        - path:
            type: PathPrefix
            value: /api/mcp
      backendRefs:
        - name: homeassistant
          port: 8123
    - backendRefs:
        - name: homeassistant
          port: 8123
