namespaces/proxy/10-jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - jellyfin.j5t.io
  rules:
    - backendRefs:
        - name: jellyfin
          port: 30013
