namespaces/proxy/10-truenas.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - truenas.j5t.io
  rules:
    - backendRefs:
        - name: truenas
          namespace: proxy
          port: 443
