namespaces/proxy/10-whoami.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - whoami.j5t.io
  rules:
    - backendRefs:
        - name: whoami
          namespace: proxy
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: proxy
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: proxy
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: whoami
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: 48Mi
              cpu: 100m
            limits:
              memory: 48Mi
              cpu: 100m
