namespaces/proxy/homeassistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - homeassistant.jarrett.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /login
      backendRefs:
        - name: homeassistant
          port: 80
    - backendRefs:
        - name: homeassistant
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: proxy
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8123
  type: ClusterIP
