namespaces/proxy/jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - jellyfin.j5t.io
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyfintwo-tls-route
  namespace: proxy
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - "jellyfintwo.j5t.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfintwo
      port: 30013
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfintwo
  namespace: proxy
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 30013
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfintwo
  namespace: proxy
subsets:
  - addresses:
      - ip: 192.168.0.58
    ports:
      - name: web
        port: 30013
        protocol: TCP
