namespaces/proxy/omada.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-tls-route
  namespace: proxy
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - omada.j5t.io
  rules:
    - backendRefs:
        - name: omada
          namespace: proxy
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: omada
  namespace: proxy
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  type: ClusterIP
