namespaces/proxy/opendtu.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opendtu-tls-route
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - opendtu.jarrett.tech
  rules:
  - backendRefs:
    - name: opendtu
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: opendtu
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
