namespaces/proxy/synology.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology-tls-route
  namespace: proxy
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - synology.jarrett.tech
  rules:
  - backendRefs:
    - name: synology
      namespace: proxy
      port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photos-tls-route
  namespace: proxy
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - photos.jarrett.tech
  rules:
  - backendRefs:
    - name: synology
      namespace: proxy
      port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calendar-tls-route
  namespace: proxy
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - calendar.jarrett.tech
  rules:
  - backendRefs:
    - name: synology
      namespace: proxy
      port: 8082
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: contacts-tls-route
  namespace: proxy
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - contacts.jarrett.tech
  rules:
  - backendRefs:
    - name: synology
      namespace: proxy
      port: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: synology
  namespace: proxy
spec:
  ports:
    - name: synology
      port: 5000
      protocol: TCP
      targetPort: 5000
    - name: photos
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: calendar
      port: 8082
      protocol: TCP
      targetPort: 8082
    - name: contacts
      port: 8083
      protocol: TCP
      targetPort: 8083
  type: ClusterIP
