namespaces/proxy/whoami.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-to-proxy-services
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gateway
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-tls-route
spec:
  parentRefs:
  - name: jarrett-net
    namespace: gateway
  hostnames:
  - whoami.j5t.io
  rules:
  - backendRefs:
    - name: whoami
      namespace: proxy
      port: 80
---
apiVersion: v1
kind: Service
metadata:
 name: whoami
spec:
 ports:
   - name: web
     port: 80
     targetPort: 80
 selector:
   app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: whoami
spec:
 selector:
   matchLabels:
     app: whoami
 template:
   metadata:
     labels:
       app: whoami
   spec:
     containers:
       - name: whoami
         image: traefik/whoami
         ports:
           - name: web
             containerPort: 80
